# xosmessengerv

./: .gitlab-ci.yml  .gitmodules  .prettierrc.js  .svgrrc.js  README.md  app.json  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json  tsconfig.node.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
assets/: index.js
assets/lottie/: startup-dark.json  startup-light.json
ci/scripts/: upload_oc.sh
ios/: Podfile
ios/ShareExtension/: Info.plist
ios/utopiaMessengerTest/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  utopiaMessengerTest.entitlements
ios/utopiaMessengerTest.xcodeproj/: project.pbxproj
ios/utopiaMessengerTest.xcworkspace/: contents.xcworkspacedata
ios/utopiaMessengerTestTests/: utopiaMessengerTestTests.m
patches/: rn-rnf-share-menu+1.0.3.patch
scripts/: generate-icons.js
src/: App.tsx  declarations.d.ts  mytypes.ts
src/database/: database.ts  repositories.ts
src/draft/: types.ts
src/extensions/: string.extensions.ts
src/hooks/: useAppAlert.tsx  useAppColorTheme.ts  useAppStateChangeWithCallbacks.tsx  useAsyncStorage.ts  useAutoAuthorizationSwitch.ts  useAwareInputWithScroll.ts  useBackHandlerPreventorWithRoute.ts  useChat.ts  useCopyToClipboard.ts  useDefaultNavigationOptions.ts  useForm.ts  useGallery.ts  useHandleAppThemeColorChanges.tsx  useHandleInputTaps.ts  useKeyboard.ts  useOnPagePicker.tsx  useProtectedValuePicker.tsx  (+2 more)
tm/: CMakeLists.txt  NativeUtopiaManager.ts  NativeUtopiaModule.ts  NativeUtopiaUtils.ts  README.md  TurboModules.podspec  Types.ts
(+149 files in other folders)
